--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=dice-evwih, initial-scale=1.0">
     <title></title>Joao saty<title></title>
-</head>
-<link rel="stylesheet" href=""
+
+link rel="stylesheet" href="index.css"
 <body>
 <nav></nav>
     <ul>
